Fix code format and automate checking (#1625)
No logical and/or functional changes, just code formatting changes and code formatting checking.

* added check style maven dependency

* Add checkstyle file and update checkstyle version

* Initial attempts at reformatting

Warning count brought down significantly, but not enough

* More code style fixes

* All checkstyle and compile problems gone.

Still looking at some integration issue

* Adds missed change and merges master

* Whoops, need to revert a lambda change

* Spelling errors, checkstyle problems are now errors.

 Also a single JavaDoc fix.

* Finals will not be changed fast.

* Add newline check and fix newline at end of file

*  Move suppression reference to checkstyle.xml

*  Reorganize suppression, check and fix XML files for newlines